<resources>
    <string name="app_name">Electric cars</string>
    <string name="cd_car_image">Car photo</string>
    <string name="name">Name:</string>
    <string name="price">Price:</string>
    <string name="battery_capacity">Battery capacity:</string>
    <string name="power">Power:</string>
    <string name="recharge_time">Recharge time:</string>
    <string name="cars">Cars</string>
    <string name="favorites">Favorites</string>
    <string name="kwh_price">KWh price</string>
    <string name="distance">Total distance (Km)</string>
    <string name="autonomy">Autonomy (KWh/Km)</string>
    <string name="calculate">Calculate</string>
    <string name="costs">Total cost: %1$f</string>
    <string name="starts_calculation_activity">Starts calculation activity</string>
    <string name="no_internet">Internet not available</string>
    <string name="response_error">ERROR!</string>
    <string name="saved_calc">Saved calc</string>
</resources>