<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/standard_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_favorites"
        />

    <TextView
        android:id="@+id/tv_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        app:layout_constraintStart_toEndOf="@id/tv_cars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_cars" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/standard_margin">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_car_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="@dimen/standard_margin"
                android:contentDescription="@string/cd_car_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="@dimen/standard_field_size"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                app:layout_constraintTop_toBottomOf="@id/iv_car_image"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tv_car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                app:layout_constraintStart_toEndOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/iv_car_image"
                tools:text="Car name" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="@dimen/standard_field_size"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/price" />

            <TextView
                android:id="@+id/tv_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                app:layout_constraintStart_toEndOf="@+id/tv_price"
                app:layout_constraintTop_toBottomOf="@id/tv_car_name"
                tools:text="Price" />

            <TextView
                android:id="@+id/tv_battery"
                android:layout_width="@dimen/standard_field_size"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                app:layout_constraintTop_toBottomOf="@id/tv_price"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/battery_capacity" />

            <TextView
                android:id="@+id/tv_battery_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                app:layout_constraintStart_toEndOf="@+id/tv_battery"
                app:layout_constraintTop_toBottomOf="@id/tv_price_value"
                tools:text="Battery" />

            <TextView
                android:id="@+id/tv_power"
                android:layout_width="@dimen/standard_field_size"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                app:layout_constraintTop_toBottomOf="@id/tv_battery"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/power" />

            <TextView
                android:id="@+id/tv_power_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                app:layout_constraintStart_toEndOf="@+id/tv_power"
                app:layout_constraintTop_toBottomOf="@id/tv_battery_value"
                tools:text="Power" />

            <TextView
                android:id="@+id/tv_recharge"
                android:layout_width="@dimen/standard_field_size"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                app:layout_constraintTop_toBottomOf="@id/tv_power"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/recharge_time" />

            <TextView
                android:id="@+id/tv_recharge_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_margin"
                app:layout_constraintStart_toEndOf="@+id/tv_recharge"
                app:layout_constraintTop_toBottomOf="@id/tv_power_value"
                tools:text="Time" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>